--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-pokemon-search (namePokemon)="handlePokemonName($event)"></app-pokemon-search>
-<app-pokemon-details [namePokemon]="namePokemon"></app-pokemon-details>
+<component-header></component-header>
 <router-outlet></router-outlet>
+
